<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#656565"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#494848"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:src="@drawable/refresh"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toRightOf="@id/spinner1"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="72dp"
        android:layout_height="33dp"
        android:text="@string/device"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="167dp"
        android:layout_height="30dp"
        app:layout_constraintRight_toLeftOf="@id/refresh"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/channelInput"
        android:layout_width="171dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1057132352.000000"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@id/tuner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/spinner1"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/tuner"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:backgroundTint="#656565"
        android:text="@string/Tune"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner2" />


    <TextView
        android:id="@+id/channel"
        android:layout_width="190dp"
        android:layout_height="33dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="68dp"
        android:text="@string/ch"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/channelnum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <TextView
        android:id="@+id/channelnum"
        android:layout_width="68dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/None"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/channel"
        app:layout_constraintTop_toBottomOf="@id/refresh" />

    <TextView
        android:id="@+id/Sig"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:text="@string/Sig"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="166dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/channel"/>

    <ProgressBar
        android:id="@+id/progressBarSig"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/Sig"
        app:layout_constraintTop_toBottomOf="@id/channelnum" />

    <TextView
        android:id="@+id/SNR"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:text="@string/SNR"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/channel" />

    <ProgressBar
        android:id="@+id/progressBarSNR"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/SNR"
        app:layout_constraintTop_toBottomOf="@id/progressBarSig" />

    <TextView
        android:id="@+id/Sym"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginTop="72dp"
        android:text="@string/Sym"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/channel" />

    <ProgressBar
        android:id="@+id/progressBarSym"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/Sym"
        app:layout_constraintTop_toBottomOf="@id/progressBarSNR" />

    <TextView
        android:id="@+id/DataRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Sym" />

    <TextView
        android:id="@+id/DataRateNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="4dp"
        android:text="@string/Placeholder1"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="@id/progressBarSym"
        app:layout_constraintStart_toEndOf="@id/DataRate"
        app:layout_constraintTop_toBottomOf="@id/progressBarSym" />

    <TextView
        android:id="@+id/NetRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Net"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DataRate" />

    <TextView
        android:id="@+id/NetRateNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="4dp"
        android:text="@string/Placeholder2"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="@id/DataRateNum"
        app:layout_constraintStart_toEndOf="@id/NetRate"
        app:layout_constraintTop_toBottomOf="@id/DataRateNum" />

    <ImageButton
        android:id="@+id/rew"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:src="@drawable/rew"
        app:layout_constraintTop_toBottomOf="@id/channelInput"
        app:layout_constraintLeft_toLeftOf="@id/channelInput" />

    <ImageButton
        android:id="@+id/ff"
        android:layout_width="68dp"
        android:layout_height="58dp"
        android:src="@drawable/ff"
        app:layout_constraintTop_toBottomOf="@id/channelInput"
        app:layout_constraintLeft_toRightOf="@id/rew" />

    <Spinner
        android:id="@+id/multiplex"
        android:layout_width="317dp"
        android:layout_height="32dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="36dp"
        app:layout_constraintLeft_toLeftOf="@id/rew"
        app:layout_constraintTop_toBottomOf="@id/tuner" />

</androidx.constraintlayout.widget.ConstraintLayout>